engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_halfwidth_sound_marks_narrow.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
assertion_line: 2890
expression: rendered
---
width 20:
  Halfwidth sound   
  marks             
                    
                    
› 1. abｶﾞc  dakuten  
            descript
            ion     
  2. aﾊﾟc            
            handakut
            en      
            descript
            ion     
                    

width 24:
  Halfwidth sound       
  marks                 
                        
                        
› 1. abｶﾞc  dakuten      
            description 
  2. aﾊﾟc   handakuten   
            description
